# empResearcher

./: .env.example  .gitignore  AGENTS.md  Dockerfile  HLD.md  LICENSE  PRD.md  README.md  docker-compose.yml  pyproject.toml
config/: app_config.yaml  llm_providers.yaml  search_config.yaml
deployment/k8s/: emp-researcher-k8s.yaml  monitoring-k8s.yaml
deployment/prometheus/: prometheus.yml
src/emp_researcher/: __init__.py  cli.py
src/emp_researcher/agents/: __init__.py  coordinator.py  evaluator.py  query_rewriter.py  reporter.py  synthesizer.py  web_searcher.py
src/emp_researcher/api/: main.py
src/emp_researcher/models/: __init__.py  schemas.py
src/emp_researcher/services/: __init__.py  bilingual_search.py  document_parser.py  firecrawl_client.py  graphrag_engine.py  multimodal_processor.py  observability.py  rerank_service.py  search_client.py  vector_store.py
src/emp_researcher/services/llm/: __init__.py  base.py  ollama_provider.py  openai_provider.py  router.py
src/emp_researcher/utils/: __init__.py  config.py  telemetry.py
tests/integration/: test_api.py  test_api_phase3.py  test_k8s.py
tests/unit/: test_bilingual_search.py  test_config.py  test_firecrawl_client.py  test_graphrag_engine.py  test_llm.py  test_multimodal_processor.py  test_rerank_service.py
